2022-09-19T00:36:50Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3079227482
* notice: last 14d: unq all: 6 33
* notice: prev accum: outdated-unq outdated-all / unq all: 544 1786 / 561 1818
* notice: next accum: outdated-unq outdated-all / unq all: 544 1786 / 561 1819
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +3 +6 -0 -0 / 3 6
* notice: removed / changed dates: [] / [2022-09-18]

2022-09-18T16:07:11Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3077784358
* notice: last 14d: unq all: 6 32
* notice: prev accum: outdated-unq outdated-all / unq all: 544 1786 / 560 1815
* notice: next accum: outdated-unq outdated-all / unq all: 544 1786 / 561 1818
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [] / [2022-09-18]

2022-09-18T08:07:57Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3076390919
* notice: last 14d: unq all: 5 29
* notice: prev accum: outdated-unq outdated-all / unq all: 543 1785 / 558 1813
* notice: next accum: outdated-unq outdated-all / unq all: 544 1786 / 560 1815
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2022-09-04] / [2022-09-18]

2022-09-18T00:39:36Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3075338446
* notice: last 14d: unq all: 5 28
* notice: prev accum: outdated-unq outdated-all / unq all: 543 1785 / 558 1812
* notice: next accum: outdated-unq outdated-all / unq all: 543 1785 / 558 1813
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-17]

2022-09-17T08:08:03Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3072647990
* notice: last 14d: unq all: 5 27