@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-19T00:36:50Z",
-  "count_outdated" : 1786,
-  "uniques_outdated" : 544,
-  "count" : 1819,
-  "uniques" : 561,
+  "timestamp" : "2022-09-19T16:08:10Z",
+  "count_outdated" : 1788,
+  "uniques_outdated" : 545,
+  "count" : 1820,
+  "uniques" : 562,
   "clones" : [
-    {
-      "timestamp": "2022-09-05T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-07T00:00:00Z",
       "count": 1,
@@ -95,6 +88,13 @@
       "count_minmax": [ 2, 6 ],
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ]
+    },
+    {
+      "timestamp": "2022-09-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
