@@ -1,12 +1,7 @@
 {
-  "count": 33,
-  "uniques": 6,
+  "count": 32,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-09-05T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-07T00:00:00Z",
       "count": 1,
@@ -66,6 +61,11 @@
       "timestamp": "2022-09-18T00:00:00Z",
       "count": 6,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-09-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
