@@ -1,3 +1,11 @@
+2022-09-19T16:08:10Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3083907995
+* notice: last 14d: unq all: 5 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 544 1786 / 561 1819
+* notice: next accum: outdated-unq outdated-all / unq all: 545 1788 / 562 1820
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-09-05] / [2022-09-19]
+
 2022-09-19T00:36:50Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3079227482
 * notice: last 14d: unq all: 6 33
